# idea_beta

./: .env.example  .eslintrc.json  .gitignore  .npmrc  DEVELOPMENT_PLAN.md  Dockerfile.e5  E2_POLICY_CONTROL_SUMMARY.md  FRONTEND_TEST_GUIDE.md  Makefile  README.md  README_E5.md  TEST_README.md  agent_native_comm_control_PRD_Blueprint_RnDPlan_v1.md  alembic.ini  code_review_agent_native_comm_control.md  docker-compose.yml  e2_demo.py  e2_final.py  engineering_dev_plans_E1_v1.md  engineering_dev_plans_E2_v1.md  engineering_dev_plans_E3_v1.md  engineering_dev_plans_E4_v1.md  engineering_dev_plans_E5_v1.md  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  run_all_tests.sh  tailwind.config.ts  test_demo.py  test_examples.py  test_interactive.py  tsconfig.base.json  tsconfig.e5.json  tsconfig.json  vitest.config.ts  vitest.e5.config.ts
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: initial_schema.py
backend/e1/: __init__.py
backend/e2/: __init__.py
backend/e3/: .env.example  __init__.py  main.py  pyproject.toml  requirements.txt
backend/e3/action_runtime/: __init__.py  contract_adapter.py  engine.py  models.py  registry.py  state_machine.py
backend/e3/action_runtime/actions/: __init__.py
backend/e3/api/: __init__.py  deps.py
backend/e3/api/v1/: __init__.py  actions.py  delivery.py  ingress.py  messages.py
backend/e3/channel_adapters/: __init__.py  base.py  circuit_breaker.py
backend/e3/channel_adapters/calendar/: __init__.py  google.py
backend/e3/channel_adapters/email/: __init__.py  gmail.py
backend/e3/config/: __init__.py  settings.py
backend/e3/core/: __init__.py  database.py  idempotency.py  redis.py
backend/e3/egress/: __init__.py
backend/e3/external_resolver/: __init__.py  models.py  resolver.py
backend/e3/ingress/: __init__.py
backend/e3/outbox_inbox/: __init__.py  inbox.py  models.py  outbox.py
backend/e3/tests/: __init__.py  conftest.py
backend/e3/tests/e2e/: __init__.py
backend/e3/tests/integration/: __init__.py  test_calendar_adapter.py  test_email_adapter.py
backend/e3/tests/unit/: __init__.py  test_action_envelope.py  test_action_state_machine.py  test_idempotency.py
backend/shared/: __init__.py
docs/: er-diagram.md  state-machine.md
docs/api/: e3-openapi.yaml  e5-openapi.yaml  openapi.yaml
docs/demo_scripts/: follow_up.json  info_collection.json  time_coordination.json
docs/design/: ARCHITECTURE_REVIEW_2026-03.md  PHASE_0_SUMMARY.md  PHASE_1A_SUMMARY.md  PHASE_1B_SUMMARY.md  actionrun-state-machine.md  api-capability-analysis.md  data_models.md  decision_chain.md  external-binding.md  outbox-inbox-schema.md  state_machines.md
docs/engineering/: COMPLETION_ANALYSIS.md  INTEGRATION_ASSESSMENT.md  PHASE0_ACCEPTANCE.md  PHASE2_ACCEPTANCE.md  PHASE3_ACCEPTANCE.md  PRD_VERSION_COMPARISON.md  SPRINT_1_EXECUTION_PLAN.md  SPRINT_2_EXECUTION_PLAN.md  WRITE_SCOPE_LOCK.md
docs/product/: COMMUNICATION_OS_V1_SPEC.md  CONTRACT_DESIGN_DECISIONS.md  CONTRACT_FIELD_REFERENCE.md  CONTRACT_REVIEW_REPORT.md  NEXT_PHASE_IMPLEMENTATION_BACKLOG.md  PARALLEL_ENGINEERING_PLANS.md  QUICKSTART_CONTRACTS.md  REPO_EVOLUTION_ROADMAP.md  dev_plan_v0.md
docs/testing/: TEST_DOCUMENTATION.md  TEST_MANUAL.md  test_cases.md
scripts/: fix_html_escape.py  health-check.sh  setup-e3-dev.sh  setup.sh
src/app/: globals.css  layout.tsx
src/app/(app)/: layout.tsx  page.tsx
src/components/approval/: ApprovalActions.tsx  ApprovalCard.tsx  ApprovalPreview.tsx  index.ts
src/components/common/: EmptyState.tsx  MessageBubble.tsx  RiskLabel.tsx  StatusBadge.tsx  index.ts
src/components/delegation/: DelegationSlider.tsx  KillSwitchButton.tsx  ProfileCard.tsx  index.ts
src/components/layout/: AppShell.tsx  Sidebar.tsx  TopNav.tsx  index.ts
src/components/providers/: QueryProvider.tsx
src/components/replay/: ReplayTimeline.tsx  index.ts
src/components/thread/: ThreadActionBar.tsx  ThreadBucket.tsx  ThreadCard.tsx  ThreadHeader.tsx  ThreadTimeline.tsx  index.ts
src/components/ui/: alert-dialog.tsx  avatar.tsx  checkbox.tsx  dialog.tsx  index.ts  (+13 more)
src/e5/: index.ts
src/mocks/: index.ts
src/myproj/: __init__.py  config.py  main.py
src/policy_control/: __init__.py  __main__.py  controller.py  core.py  e2_module.py
src/shared/: interfaces.ts
tests/: conftest.py  setup.ts
tests/integration/: test_contract_flow.py
tests/regression_tests/: test_cases.json
tests/unit/: planner.test.ts  risk.test.ts  test_api_endpoints.py  test_db_session.py  test_event_store.py  test_state_machine.py  test_thread.py
(+169 files in other folders)
